--- a/package.json
+++ b/package.json
@@ -9,19 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.828.0",
+    "@payloadcms/db-mongodb": "^3.42.0",
+    "@payloadcms/email-resend": "^3.42.0",
+    "@payloadcms/next": "^3.42.0",
+    "@payloadcms/payload-cloud": "^3.42.0",
+    "@payloadcms/richtext-lexical": "^3.42.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/stripe-js": "^7.3.1",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "graphql": "^16.11.0",
+    "html2canvas": "^1.4.1",
+    "lucide-react": "^0.515.0",
+    "next": "15.3.3",
+    "next-themes": "^0.4.6",
+    "payload": "^3.42.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "resend": "^4.6.0",
+    "stripe": "^18.2.1",
+    "tailwind-merge": "^3.3.1",
+    "twilio": "^5.7.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
