--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@
 # MongoDB connection string
 # For local development: mongodb://localhost:27017/memory-capsule
 # For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/memory-capsule
-MONGODB_URI=mongodb://localhost:27017/memory-capsule
+DATABASE_URI=mongodb://localhost:27017/memory-capsule
 
 # =============================================================================
 # PAYLOAD CMS CONFIGURATION
