--- a/env.production.example
+++ b/env.production.example
@@ -39,4 +39,7 @@ NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
 SENTRY_DSN=https://your-sentry-dsn
 
 # Performance
-NEXT_PUBLIC_CDN_URL=https://your-cdn-domain.com 
+NEXT_PUBLIC_CDN_URL=https://your-cdn-domain.com
+
+# File Storage
+MEDIA_DIR=/tmp/media 
