--- a/env.production.example
+++ b/env.production.example
@@ -42,4 +42,7 @@ SENTRY_DSN=https://your-sentry-dsn
 NEXT_PUBLIC_CDN_URL=https://your-cdn-domain.com
 
 # File Storage
-MEDIA_DIR=/tmp/media 
+MEDIA_DIR=/tmp/media
+
+# Vercel Blob Storage
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_your_actual_token_here 
