--- a/env.example
+++ b/env.example
@@ -96,6 +96,9 @@ AWS_S3_REGION=us-east-1
 AWS_S3_ACCESS_KEY_ID=your-s3-access-key-id
 AWS_S3_SECRET_ACCESS_KEY=your-s3-secret-access-key
 
+# Vercel Blob Storage (for production file uploads)
+BLOB_READ_WRITE_TOKEN=your_vercel_blob_token_here
+
 # =============================================================================
 # RATE LIMITING & SECURITY
 # =============================================================================
