--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^4.6.0",
+    "sharp": "^0.34.2",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.7.1",
