--- a/env.example
+++ b/env.example
@@ -35,7 +35,7 @@ AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_REGION=us-east-1
 
 # Email configuration
-FROM_EMAIL=noreply@yourdomain.com
+FROM_EMAIL=info@timecapsul.co
 FROM_NAME=Memory Capsule Creator
 
 # =============================================================================
@@ -58,7 +58,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
-SMTP_FROM=admin@yourdomain.com
+SMTP_FROM=info@timecapsul.co
 
 # =============================================================================
 # SMS CONFIGURATION (for SMS delivery)
