--- a/env.production.example
+++ b/env.production.example
@@ -18,7 +18,7 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # Email Service (Resend)
 RESEND_API_KEY=re_your_resend_api_key
-FROM_EMAIL=noreply@your-domain.com
+FROM_EMAIL=info@timecapsul.co
 
 # SMS Service (Twilio) - Optional
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
